# ncona-code-samples

./: .gitignore  README.md
add-watermark-to-images-from-the-browser/: README.md  watermark.html
adding-configurations-to-esp-idf-projects/: .gitignore  Dockerfile  Makefile  README.md
aligned-and-packed-data-in-c-and-cpp/: Dockerfile  Makefile  README.md
asynchronous-programming-with-tokio/: README.md
building-a-stand-alone-library-for-esp-idf/: .gitignore  Makefile  README.md
building-google-cloud-storage-signed-urls/: .gitignore  Makefile  README.md
building-google-cloud-storage-signed-urls/generate-url/: Cargo.toml
building-google-cloud-storage-signed-urls/generate-url/src/: main.rs
building-web-servers-with-axum/: Dockerfile  Makefile  README.md
cmake/06_testing/: CMakeLists.txt  README.md
cmake/06_testing/test/: math_test.cpp
cmake/09_with_conan_for_arduino/: BoardOptions.cmake  CMakeLists.txt  README.md  arduino  conanfile.txt
cmake/09_with_conan_for_arduino/src/: main.cpp
configuring-esp32-to-act-as-access-point/: .gitignore  Dockerfile  README.md
error-handling-in-rust/: Dockerfile  Makefile  README.md
esp32-non-volatile-storage-nvs/: .gitignore  Makefile  README.md
firestore-transactions-in-rust/: .gitignore  Makefile  README.md
get-arguments-used-to-start-a-java-process/: .gitignore  BUILD  Main.java  README.md
getting-pid-for-java-process/: .gitignore  README.md
handling-interrupts-with-esp-idf/: .gitignore  Dockerfile  Makefile  README.md
instrumenting-an-istio-cluster-with-jaeger-tracing/: README.md
internationalization-of-svelte-apps/: Dockerfile  Makefile  README.md
introduction-to-cadence-workflows/: README.md
introduction-to-elasticsearch/: README.md
introduction-to-esp32-development/: .gitignore  Makefile  README.md
introduction-to-jaeger-tracing/: README.md  requirements.txt  trace.py
introduction-to-kafka/: README.md
introduction-to-ngspice-for-circuit-simulation/: README.md  voltage-divider-pulse.cir  voltage-divider.cir
introduction-to-tonic-for-grpc-in-rust/: .gitignore  Dockerfile  Makefile  README.md
kubernetes-config-maps/: README.md  config-map.yaml  deployment-file.yaml  deployment.yaml
kubernetes-networking-with-istio/: README.md
making-http-https-requests-with-esp32/: .gitignore  Makefile  README.md
modularizing-esp32-software/: .gitignore  Makefile  README.md
unit-testing-code-for-esp32/library-root/test/: CMakeLists.txt
unit-testing-code-for-esp32/library-root/test/mock/: esp_err.h  esp_event.cpp  esp_event.h
unit-testing-code-for-esp32/library-root/test/src/: test-main.cpp
using-gcloud-sdk-to-work-with-storage-buckets-in-rust/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
using-gcloud-sdk-to-work-with-storage-buckets-in-rust/src/: main.rs
(+275 files in other folders)
