[package]
name = "gcloud-storage-example"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
futures-util = "0.3.31"
gcloud-sdk = { version = "0.27", features = ["google-storage-v2" ] }
rand = "0.9.1"
rustls = "0.23"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tonic = "0.13.1"
