[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.37", features = ["serde"] }
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
url = "2.5.4"
yup-oauth2 = "12.1.0"
